Bug 293370 - After a file deletion old file name is still shown in the status bar
Summary: After a file deletion old file name is still shown in the status bar
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4.0-beta3 "Single Step"
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-05 16:08 UTC by Victor Varvaryuk
Modified: 2018-05-06 00:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Victor Varvaryuk 2012-02-05 16:08:56 UTC
Version:           2.4.0 (using KDE 4.8.0) 
OS:                Linux

http://www.youtube.com/watch?v=-cUGsmzD3As&feature=youtu.be

Reproducible: Didn't try

Steps to Reproduce:
Using keyboard move cursor to a file to delete. Its name will be shown in the status bar. Press Ctrl+Del to delete it. 

Actual Results:  
After the file has been deleted its name is still shown in the status bar.

Expected Results:  
In the status bar should be shown name of the file with the cursor.
Comment 1 Davide Gianforte 2016-12-26 13:26:31 UTC
Still present in 2.5.0.
Comment 2 Alex Bikadorov 2016-12-31 15:55:38 UTC
Git commit bffdb35d9920103c8993b16b24ab52ee1644df66 by Alexander Bikadorov.
Committed on 30/12/2016 at 19:06.
Pushed by abikadorov into branch 'master'.

FIXED: [ 293370 ] After a file deletion old file name is still shown in the status bar

Status bar is updated now on every "currentChange" signal from KrView.

M  +0    -5    krusader/Panel/krinterview.cpp
M  +1    -1    krusader/Panel/krmousehandler.cpp
M  +0    -14   krusader/Panel/krview.cpp
M  +2    -3    krusader/Panel/krview.h
M  +9    -5    krusader/Panel/listpanel.cpp
M  +1    -1    krusader/Panel/listpanel.h
M  +1    -1    krusader/krusader.cpp
M  +1    -1    krusader/krusader.h

https://commits.kde.org/krusader/bffdb35d9920103c8993b16b24ab52ee1644df66