FIXED: [ 293370 ] After a file deletion old file name is still shown in the status bar

Status bar is updated now on every "currentChange" signal from KrView.

BUG: 293370